--- a/Styles/style.css
+++ b/Styles/style.css
@@ -16,7 +16,7 @@
     /* margin: 0 auto; */
     padding-left: 180px;
     padding-top: 40px;
-    padding-right: 180px;
+    padding-right: 70px;
 }
 
 nav {
@@ -66,6 +66,14 @@ nav {
 
 }
 
+.menu {
+    color: #3C354F;
+    text-align: center;
+    font-family: Work Sans;
+    font-size: 18px;
+    font-weight: 500;
+}
+
 #icon1 {
     width: 30.916px;
     height: 25px;
@@ -89,5 +97,96 @@ nav {
     height: 24px;
 }
 
-.icon-container img {}
 /* header part end */
+.first-banner-text {
+    width: 701px;
+    height: 600px;
+    justify-content: right;
+}
+
+.first-banner-container {
+    display: flex;
+    height: 600px;
+    fill: linear-gradient(223deg, rgba(140, 87, 238, 0.03) 0%, rgba(241, 68, 174, 0.03) 100%);
+}
+
+.banner-title-subline {
+    margin-top: 140px;
+    color: #0B0223;
+   padding-left: 180px;
+    font-family: Work Sans;
+    font-size: 30px;
+    font-weight: 600;
+    text-transform: uppercase;
+}
+
+.one {
+    display: flex;
+}
+
+.banner-title {
+    padding-left: 180px;
+    font-family: Work Sans;
+    font-size: 65px;
+    font-weight: 800;
+    text-transform: uppercase;
+    background: linear-gradient(180deg, #F948B2 0%, #8758F1 100%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    margin-bottom: 35px;
+
+}
+
+.subline {
+    color: #534C64;
+    text-align: left;
+    font-family: Work Sans;
+    font-size: 20px;
+    font-weight: 500;
+    text-transform: lowercase;
+    padding-left: 180px;
+    
+}
+
+.first-banner-buttons {
+    /* display: inline-flex;
+    
+    align-items: flex-start;
+    gap: 10px; */
+    margin-top: 35px;
+   padding-left: 180px;
+}
+
+.sign-in {
+    color: #FFF;
+    font-family: Work Sans;
+    font-size: 15px;
+    font-weight: 600;
+    padding: 21px 40px;
+    text-transform: uppercase;
+    border-radius: 48px;
+    background: var(--linear, linear-gradient(90deg, #FF42A5 0%, #FF42A5 100%));
+}
+
+.go-rogue {
+    color: #FFF;
+    font-family: Work Sans;
+    font-size: 15px;
+    font-weight: 600;
+    text-transform: uppercase;
+    border-radius: 48px;
+    background: #4EC5F7;
+    padding: 21px 40px;
+
+}
+.gap{
+padding-right: 15px;
+}
+.first-banner-img{
+    width: 45%;
+    margin-bottom: 0px;
+}
+.first-banner-img img{
+    width: 100%;
+}
