--- a/Styles/style.css
+++ b/Styles/style.css
@@ -146,7 +146,11 @@ nav {
     font-weight: 600;
     text-transform: uppercase;
 }
-
+.section-title {
+    background-image: linear-gradient(to bottom, #FF42A5 0%, #FF42A5 100%);
+    color: transparent;
+    -webkit-background-clip: text;
+}
 .one {
     display: flex;
 }
@@ -223,7 +227,7 @@ padding-right: 15px;
     object-fit: cover;
 }
 /* first-banner-section-end */
-/* online games style starts here */
+/* online games section here */
 
 
 .online-games-section {
@@ -274,3 +278,58 @@ padding-right: 15px;
 }
 
 /* online games style ends here */
+/* game play section here */
+
+.game-play-container {
+    max-width: 1640px;
+    margin: 0 auto 120px;
+    display: flex;
+}
+
+.game-content {
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: right;
+    margin-top: 100px;
+    
+}
+
+.game-title {
+    color: #0B0223;
+    font-size: 3rem;
+    font-weight: 700;
+    margin-bottom: 24px;
+}
+
+.game-discription {
+    color: var(--primary-color);
+    font-size: 1.1rem;
+    font-weight: 400;
+}
+
+.game-img {
+    width: 50%;
+    position: relative;
+    margin-right: 70px;
+}
+
+.game-img img {
+    width: 100%;
+    height: 100%;
+}
+
+.litle {
+    width: 300px;
+    height: 300px;
+    position: absolute;
+    bottom: -10%;
+    left: -20%;
+}
+
+.litle img {
+    border-radius: 8px;
+}
+
+/* game play style ends here */
