--- a/Styles/style.css
+++ b/Styles/style.css
@@ -26,7 +26,7 @@ body {
 }
 
 .nav-container {
-    max-width: 1440px;
+    max-width: 1640px;
     margin: 0 auto;
     display: flex;
     align-items: center;
@@ -169,7 +169,7 @@ body {
 .sign-in {
     color: #FFF;
     font-family: Work Sans;
-    font-size: 15px;
+    font-size: 1rem;
     font-weight: 600;
     padding: 21px 40px;
     text-transform: uppercase;
@@ -180,7 +180,7 @@ body {
 .go-rogue {
     color: #FFF;
     font-family: Work Sans;
-    font-size: 15px;
+    font-size: 1rem;
     font-weight: 600;
     text-transform: uppercase;
     border-radius: 48px;
@@ -264,7 +264,7 @@ body {
 
 .game-play-container {
     max-width: 1640px;
-    margin: 0 auto 120px;
+    margin: 0 auto 90px;
     display: flex;
 }
 
@@ -274,7 +274,7 @@ body {
     justify-content: center;
     align-items: center;
     text-align: right;
-    margin-top: 100px;
+    margin-top: 50px;
 
 }
 
@@ -334,7 +334,7 @@ body {
     border-radius: 50px;
     background: #FFF;
     padding: 10px;
-    gap: 16px;
+    gap: 1px;
     color: #0B0223;
     font-size: 1.25rem;
     font-weight: 600;
