--- a/Styles/style.css
+++ b/Styles/style.css
@@ -40,6 +40,7 @@ body {
     display: flex;
     align-items: center;
     gap: 20px;
+    margin-left: 150px;
 
 }
 
@@ -56,6 +57,7 @@ body {
     justify-content: end;
     align-items: center;
     gap: 32px;
+    margin-right: 80px;
 }
 
 .nav-items-container a {
