--- a/responsive/mobile.css
+++ b/responsive/mobile.css
@@ -23,11 +23,16 @@
         background: none;
         box-shadow: none;
     }
-
+.logo-container{
+    margin-left: 10px;
+    margin-bottom:30px ;
+}
     /* nav style ends here*/
 
     /* nav style starts here*/
-
+    .nav-items-container{
+        margin: 0px auto;
+    }
     .first-banner {
         flex-direction: column-reverse;
         padding: 5px;
@@ -152,3 +157,152 @@
     }
 }
 
+
+
+
+
+
+
+
+
+
+@media screen and (min-width: 576px) and (max-width: 960px) {
+
+    .nav-container,
+    .nav-items-container {
+        flex-direction: column;
+    }
+
+    .btn-icon,
+    .btn-icon-two {
+        font-size: 16px;
+        margin: 0px 0px;
+    }
+
+    .nav-items-container {
+        margin-top: 45px;
+    }
+
+    .nav-button {
+        margin-top: 20px;
+    }
+
+    .nav {
+        background: none;
+        box-shadow: none;
+    }
+.logo-container{
+    margin: 0px;
+    margin-left: 100px;
+   
+    margin-bottom:30px ;
+}
+    /* nav style ends here*/
+
+    /* nav style starts here*/
+    .nav-items-container{
+        margin: 0px auto;
+    }
+    .first-banner {
+        flex-direction: column-reverse;
+        padding: 5px;
+    }
+
+    .first-banner-img {
+        width: 80%;
+        margin: 0 auto 24px;
+
+    }
+
+    .first-banner-container {
+        width: 100%;
+        padding: 10px;
+    }
+    .first-banner-text {
+       
+        padding-top: 70px;
+        height: 500px;
+    }
+    .sign-in{
+        padding: 11px 20px;
+
+    }
+    .go-rogue{
+        padding: 11px 20px;
+    }
+    .banner-title-subline{
+        padding-left: 100px;
+        margin-top: 30px;
+        font-size: 3rem;
+    }
+    .banner-title{
+        padding-left: 100px;
+
+        font-size: 3.5rem;
+    }
+    .subline{
+        padding-left: 100px;
+    }
+    .first-banner-buttons{
+        padding-left: 100px;
+
+    }
+
+    /* nav style ends here*/
+    /* online game style starts here*/
+
+    .online-game-container {
+
+        grid-template-columns: repeat(2, 1fr);
+        gap: 0px;
+        margin-top: 35px;
+    }
+
+    .game-card {
+        width: 100%;
+        margin: 0 auto;
+        padding: 15px;
+    }
+
+    .game-card p {
+        font-size: 1rem;
+    }
+
+    .online-game-title h3 {
+        font-size: 3rem;
+    }
+
+    .online-game-title p {
+        font-size: 1.4rem;
+    }
+
+    /* online game style end here*/
+
+    /* game play style starts */
+    .game-play-container {
+        flex-direction: column;
+    }
+
+    .litle {
+        width: 150px;
+        height: 150px;
+    }
+
+    .game-img {
+        width: 70%;
+        margin: 75px auto 0;
+    }
+
+    .game-content {
+        width: 100%;
+        text-align: center;
+    }
+
+
+    /* game play style starts */
+    .footer-list,
+    .footer-icons,
+    .footer-privacy {
+        flex-wrap: wrap;
+    }
+}
