--- a/responsive/teblet.css
+++ b/responsive/teblet.css
@@ -1,4 +1,10 @@
-@media screen and (max-width: 576px) {
+
+
+
+
+
+
+@media screen and (min-width: 576px) and (max-width: 960px) {
 
     .nav-container,
     .nav-items-container {
@@ -24,7 +30,9 @@
         box-shadow: none;
     }
 .logo-container{
-    margin-left: 10px;
+    margin: 0px;
+    margin-left: 100px;
+   
     margin-bottom:30px ;
 }
     /* nav style ends here*/
@@ -49,8 +57,8 @@
         padding: 10px;
     }
     .first-banner-text {
-        padding-left: 0px;
-        margin-left: 0px;
+       
+        padding-top: 70px;
         height: 500px;
     }
     .sign-in{
@@ -79,29 +87,23 @@
     }
 
     /* nav style ends here*/
-
     /* online game style starts here*/
 
     .online-game-container {
 
-        grid-template-columns: repeat(1, 1fr);
+        grid-template-columns: repeat(2, 1fr);
         gap: 0px;
-        margin-top: 30px;
-        padding: 0;
+        margin-top: 35px;
     }
-   
-    /* .online-game-title p {
-        font-size: 2rem;
-    } */
 
     .game-card {
-        width: 80%;
+        width: 100%;
         margin: 0 auto;
         padding: 15px;
     }
 
     .game-card p {
-        font-size: 1.6rem;
+        font-size: 1rem;
     }
 
     .online-game-title h3 {
@@ -109,7 +111,7 @@
     }
 
     .online-game-title p {
-        font-size: 1rem;
+        font-size: 1.4rem;
     }
 
     /* online game style end here*/
@@ -117,11 +119,6 @@
     /* game play style starts */
     .game-play-container {
         flex-direction: column;
-        padding: 10px 0px;
-
-    }
-    .game-content{
-        margin-top: 10px;
     }
 
     .litle {
@@ -138,25 +135,12 @@
         width: 100%;
         text-align: center;
     }
-    .game-button-container{
-    display: grid;
-        grid-template-columns: repeat(3,1fr);
-    }
-    .btn-game-link{
-        font-size: 0.5rem;
-        padding: 3px;
-        gap: 5px;
-    }
+
 
     /* game play style starts */
-
     .footer-list,
     .footer-icons,
     .footer-privacy {
-        flex-direction: column;
+        flex-wrap: wrap;
     }
 }
-
-
-
-
