--- a/responsive/mobile.css
+++ b/responsive/mobile.css
@@ -23,16 +23,19 @@
         background: none;
         box-shadow: none;
     }
-.logo-container{
-    margin-left: 10px;
-    margin-bottom:30px ;
-}
+
+    .logo-container {
+        margin-left: 10px;
+        margin-bottom: 30px;
+    }
+
     /* nav style ends here*/
 
     /* nav style starts here*/
-    .nav-items-container{
+    .nav-items-container {
         margin: 0px auto;
     }
+
     .first-banner {
         flex-direction: column-reverse;
         padding: 5px;
@@ -48,32 +51,39 @@
         width: 100%;
         padding: 10px;
     }
+
     .first-banner-text {
         padding-left: 0px;
         margin-left: 0px;
         height: 500px;
     }
-    .sign-in{
+
+    .sign-in {
         padding: 11px 20px;
 
     }
-    .go-rogue{
+
+    .go-rogue {
         padding: 11px 20px;
     }
-    .banner-title-subline{
+
+    .banner-title-subline {
         padding-left: 100px;
         margin-top: 30px;
         font-size: 3rem;
     }
-    .banner-title{
+
+    .banner-title {
         padding-left: 100px;
 
         font-size: 3.5rem;
     }
-    .subline{
+
+    .subline {
         padding-left: 100px;
     }
-    .first-banner-buttons{
+
+    .first-banner-buttons {
         padding-left: 100px;
 
     }
@@ -89,7 +99,7 @@
         margin-top: 30px;
         padding: 0;
     }
-   
+
     /* .online-game-title p {
         font-size: 2rem;
     } */
@@ -120,7 +130,8 @@
         padding: 10px 0px;
 
     }
-    .game-content{
+
+    .game-content {
         margin-top: 10px;
     }
 
@@ -138,11 +149,13 @@
         width: 100%;
         text-align: center;
     }
-    .game-button-container{
-    display: grid;
-        grid-template-columns: repeat(3,1fr);
+
+    .game-button-container {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
     }
-    .btn-game-link{
+
+    .btn-game-link {
         font-size: 0.5rem;
         padding: 3px;
         gap: 5px;
@@ -156,7 +169,3 @@
         flex-direction: column;
     }
 }
-
-
-
-
